Solved z-index on navBar

--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ h1, h2 {
     background: var(--bk-menu);
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.14);
     display: flex;
+    z-index: 2;
 }
 
 /* || MAIN CONTENT */
